[package]
name = "random-name"
version = "0.1.0"
authors = ["oScape <benoit.chassignol@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "0.13.0"
tokio = "0.1.22"
futures = "0.1"
tokio-stdin-stdout = "0.1.5"
